need to solve the overflow-hidden body

--- a/src/Components/TicTacToe/TicTacToe.css
+++ b/src/Components/TicTacToe/TicTacToe.css
@@ -1,6 +1,6 @@
-body {
+/*body {
   overflow: hidden;
-}
+}*/
 .TicTacToe-main-container {
   background: radial-gradient(
     circle,
